fix(free-dom): mask z-index

--- a/packages/core/src/style/free-dom.scss
+++ b/packages/core/src/style/free-dom.scss
@@ -15,6 +15,7 @@
 .vv-free-dom--draggable__mask.vv-free-dom--draggable__selected::after,
 .vv-free-dom--draggable__mask.vv-free-dom--draggable__selected:focus-visible {
   content: '';
+  z-index: 1;
   display: block;
   width: 100%;
   height: 100%;
